k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team-geek-dream
  annotations:
    # argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: team-geek-dream-dev.xgeeks.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: team-geek-dream
                port:
                  number: 3000
  tls:
    - hosts:
        - team-geek-dream-dev.xgeeks.tech
      secretName: team-geek-dream-dev.xgeeks.tech-tls # will be auto created
